--- a/content/主題.html
+++ b/content/主題.html
@@ -154,19 +154,25 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Develop.html'>Next</a> >> Develop<br /><h1>About</h1>
-<p><img alt="" height="199" src="./../images/小貓咪.jpg" width="211"/></p>
-<p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<h4><span style="color: #ffff00;">利用 cmsimde 建立靜態網誌方法:</span></h4>
-<p>1. 在 github 建立倉儲, git clone 到近端</p>
-<p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
-<p>以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> cmsimde</p>
-<p>建立 cmsimde 目錄, 並從 github 取下子模組內容.</p>
-<p>3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</p>
-<p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
-<p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
-<p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
-<br /> <a href='Develop.html'>Next</a> >> Develop</div>
+    <div id="tipue_search_content">分組結果 << <a href='分組結果.html'>Previous</a> <a href='大家早安.html'>Next</a> >> 大家早安<br /><h1>主題</h1>
+<h4>Google Blogger</h4>
+<p>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/12Ypf02FVP9l7a9ufZfhRicN-rzCKkAf5/view?usp=sharing">2010_BeginningGoogleBlogger.pdf</a></p>
+<h4>WCM</h4>
+<p>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1gLb9_6FEv58wVX2uShG_3sgUseFEcH_y/view?usp=sharing">2020wcm_topic_1.pdf</a>.</p>
+<p>What is a content management system?</p>
+<p>Analyzing your information life cycle.</p>
+<p>Overview of enterprise content management.</p>
+<h4><span>Git</span></h4>
+<p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1YkLWsDVRlScSuSBQv2Aa1JSjvbydJli-/view?usp=sharing">IntroductionToVersionControlAndGit.pdf</a>.</span></p>
+<p><span>What is version control?</span></p>
+<p><span>Git installation and setup.</span></p>
+<p><span>Git getting started.</span></p>
+<p><span>Commits and remote git.</span></p>
+<h4><span>Github</span></h4>
+<p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1vnkDLW1cg8hKEMUdjDstvWqiS4R1n3IC/view?usp=sharing">GithubPrimer.pdf</a></span></p>
+<p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/18MiM_d95ustohAqoUfx-gc-2dUE9Av0n/view?usp=sharing">ConflictsGUIToolAdvGit.pdf</a></span></p>
+<br/><br/><span>實習項目 &lt;&lt;<span> </span></span><a href="http://mde.tw/wcmj2020/content/%E5%AF%A6%E7%BF%92%E9%A0%85%E7%9B%AE.html">Previous</a><span><span> </span></span><a href="http://mde.tw/wcmj2020/content/%E5%80%89%E5%84%B2%E8%88%87%E7%B6%B2%E7%AB%99.html">Next</a><span><span> </span>&gt;&gt; 倉儲與網站</span>
+<br />分組結果 << <a href='分組結果.html'>Previous</a> <a href='大家早安.html'>Next</a> >> 大家早安</div>
         
     <!-- footer -->
       <div class="container">
