--- a/config/content.htm
+++ b/config/content.htm
@@ -65,7 +65,7 @@
 <h4><span>Github</span></h4>
 <p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1vnkDLW1cg8hKEMUdjDstvWqiS4R1n3IC/view?usp=sharing">GithubPrimer.pdf</a></span></p>
 <p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/18MiM_d95ustohAqoUfx-gc-2dUE9Av0n/view?usp=sharing">ConflictsGUIToolAdvGit.pdf</a></span></p>
-<br/><br/><span>實習項目 &lt;&lt;<span> </span></span><a href="http://mde.tw/wcmj2020/content/%E5%AF%A6%E7%BF%92%E9%A0%85%E7%9B%AE.html">Previous</a><span><span> </span></span><a href="http://mde.tw/wcmj2020/content/%E5%80%89%E5%84%B2%E8%88%87%E7%B6%B2%E7%AB%99.html">Next</a><span><span> </span>&gt;&gt; 倉儲與網站</span>
+<p><br/><br/><span>實習項目 &lt;&lt;<span> </span></span><a href="http://mde.tw/wcmj2020/content/%E5%AF%A6%E7%BF%92%E9%A0%85%E7%9B%AE.html">Previous</a><span><span> </span></span><a href="http://mde.tw/wcmj2020/content/%E5%80%89%E5%84%B2%E8%88%87%E7%B6%B2%E7%AB%99.html">Next</a><span><span> </span>&gt;&gt; 倉儲與網站</span></p>
 <h1>大家早安</h1>
 <p><span style="color: #ff00ff;">沒事就是想說早安</span></p>
 <h1>大家午安</h1>
