--- a/content/Develop.html
+++ b/content/Develop.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li><a href='Cmsimde.html'>Cmsimde</a><li><a href='有關本網站.html'>有關本網站</a><li><a href='分組結果.html'>分組結果</a><li><a href='主題.html'>主題</a><li><a href='大家早安.html'>大家早安</a><li><a href='大家午安.html'>大家午安</a><li><a href='大家晚安.html'>大家晚安</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li><a href='Cmsimde.html'>Cmsimde</a><li><a href='有關本網站.html'>有關本網站</a><li><a href='分組結果.html'>分組結果</a><li><a href='主題.html'>主題</a></li>
                       </ul>
                 </nav>
               </div>
