--- a/content/主題.html
+++ b/content/主題.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li><a href='Cmsimde.html'>Cmsimde</a><li><a href='有關本網站.html'>有關本網站</a><li><a href='分組結果.html'>分組結果</a><li><a href='主題.html'>主題</a><li><a href='大家早安.html'>大家早安</a><li><a href='大家午安.html'>大家午安</a><li><a href='大家晚安.html'>大家晚安</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li><a href='Cmsimde.html'>Cmsimde</a><li><a href='有關本網站.html'>有關本網站</a><li><a href='分組結果.html'>分組結果</a><li><a href='主題.html'>主題</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">分組結果 << <a href='分組結果.html'>Previous</a> <a href='大家早安.html'>Next</a> >> 大家早安<br /><h1>主題</h1>
+    <div id="tipue_search_content">分組結果 << <a href='分組結果.html'>Previous</a> <br /><h1>主題</h1>
 <h4>Google Blogger</h4>
 <p>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/12Ypf02FVP9l7a9ufZfhRicN-rzCKkAf5/view?usp=sharing">2010_BeginningGoogleBlogger.pdf</a></p>
 <h4>WCM</h4>
@@ -171,8 +171,8 @@ img.add_border {
 <h4><span>Github</span></h4>
 <p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1vnkDLW1cg8hKEMUdjDstvWqiS4R1n3IC/view?usp=sharing">GithubPrimer.pdf</a></span></p>
 <p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/18MiM_d95ustohAqoUfx-gc-2dUE9Av0n/view?usp=sharing">ConflictsGUIToolAdvGit.pdf</a></span></p>
-<p><br/><br/><span>實習項目 &lt;&lt;<span> </span></span><a href="http://mde.tw/wcmj2020/content/%E5%AF%A6%E7%BF%92%E9%A0%85%E7%9B%AE.html">Previous</a><span><span> </span></span><a href="http://mde.tw/wcmj2020/content/%E5%80%89%E5%84%B2%E8%88%87%E7%B6%B2%E7%AB%99.html">Next</a><span><span> </span>&gt;&gt; 倉儲與網站</span></p>
-<br />分組結果 << <a href='分組結果.html'>Previous</a> <a href='大家早安.html'>Next</a> >> 大家早安</div>
+<p><br/><br/><br/></p>
+<br />分組結果 << <a href='分組結果.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
