--- a/config/content.htm
+++ b/config/content.htm
@@ -62,7 +62,8 @@
 <p><span>Git installation and setup.</span></p>
 <p><span>Git getting started.</span></p>
 <p><span>Commits and remote git.</span></p>
-<h4><span>Github</span></h4>
+<h3><span>Github.</span></h3>
 <p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1vnkDLW1cg8hKEMUdjDstvWqiS4R1n3IC/view?usp=sharing">GithubPrimer.pdf</a></span></p>
 <p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/18MiM_d95ustohAqoUfx-gc-2dUE9Av0n/view?usp=sharing">ConflictsGUIToolAdvGit.pdf</a></span></p>
+<h1><span>w9</span></h1>
 <p><br/><br/><br/></p>
