--- a/content/w9.html
+++ b/content/w9.html
@@ -154,22 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Cmsimde << <a href='Cmsimde.html'>Previous</a> <a href='分組結果.html'>Next</a> >> 分組結果<br /><h1>有關本網站</h1>
-<p>這門課程在教導學員如何利用網際環境管理與工程應用相關的內容管理.</p>
-<p>總共使用兩套網際內容管理系統:</p>
-<p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a></p>
-<p><a href="https://www.blogger.com/">https://www.blogger.com/</a></p>
-<p>Please use your student number to<span> </span><a href="https://github.com/join">register a github account</a>.</p>
-<p>請利用學號註冊一個 Github 帳號</p>
-<p>Repository (倉儲):<span> </span><a href="https://github.com/mdecourse/wcmj2020">https://github.com/mdecourse/wcmj2020</a> </p>
-<p>Project (專案):<span> </span><a href="https://github.com/mdecourse/wcmj2020/projects/1">https://github.com/mdecourse/wcmj2020/projects/1</a> </p>
-<p>Gitter (討論區):<span> </span><a href="https://gitter.im/mdecourse/wcmj2020">https://gitter.im/mdecourse/wcmj2020</a> </p>
-<p>Web site (網站): <a href="https://mde.tw/wcmj2020">https://mde.tw/wcmj2020</a> </p>
-<p>Blog (網誌):<span> </span><a href="https://mde.tw/wcmj2020/blog">https://mde.tw/wcmj2020/blog</a> </p>
-<p>Presentation (簡報):<span> </span><a href="https://mde.tw/wcmj2020/reveal">https://mde.tw/wcmj2020/reveal</a> </p>
-<p>電腦輔助設計室與協同設計室行事曆</p>
-<p><span style="color: #ff00ff;"></span></p>
-<br />Cmsimde << <a href='Cmsimde.html'>Previous</a> <a href='分組結果.html'>Next</a> >> 分組結果</div>
+    <div id="tipue_search_content">Github. << <a href='Github..html'>Previous</a> <br /><h1>w9</h1>
+<p><br/><br/><br/></p><br />Github. << <a href='Github..html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
