--- a/content/主題.html
+++ b/content/主題.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li><a href='Cmsimde.html'>Cmsimde</a><li><a href='有關本網站.html'>有關本網站</a><li><a href='分組結果.html'>分組結果</a><li><a href='主題.html'>主題</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li><a href='Cmsimde.html'>Cmsimde</a><li><a href='有關本網站.html'>有關本網站</a><li><a href='分組結果.html'>分組結果</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Github..html'>Github.</a></li></ul><li><a href='w9.html'>w9</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">分組結果 << <a href='分組結果.html'>Previous</a> <br /><h1>主題</h1>
+    <div id="tipue_search_content">分組結果 << <a href='分組結果.html'>Previous</a> <a href='Github..html'>Next</a> >> Github.<br /><h1>主題</h1>
 <h4>Google Blogger</h4>
 <p>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/12Ypf02FVP9l7a9ufZfhRicN-rzCKkAf5/view?usp=sharing">2010_BeginningGoogleBlogger.pdf</a></p>
 <h4>WCM</h4>
@@ -168,11 +168,7 @@ img.add_border {
 <p><span>Git installation and setup.</span></p>
 <p><span>Git getting started.</span></p>
 <p><span>Commits and remote git.</span></p>
-<h4><span>Github</span></h4>
-<p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1vnkDLW1cg8hKEMUdjDstvWqiS4R1n3IC/view?usp=sharing">GithubPrimer.pdf</a></span></p>
-<p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/18MiM_d95ustohAqoUfx-gc-2dUE9Av0n/view?usp=sharing">ConflictsGUIToolAdvGit.pdf</a></span></p>
-<p><br/><br/><br/></p>
-<br />分組結果 << <a href='分組結果.html'>Previous</a> </div>
+<br />分組結果 << <a href='分組結果.html'>Previous</a> <a href='Github..html'>Next</a> >> Github.</div>
         
     <!-- footer -->
       <div class="container">
