--- a/config/content.htm
+++ b/config/content.htm
@@ -66,4 +66,5 @@
 <p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1vnkDLW1cg8hKEMUdjDstvWqiS4R1n3IC/view?usp=sharing">GithubPrimer.pdf</a></span></p>
 <p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/18MiM_d95ustohAqoUfx-gc-2dUE9Av0n/view?usp=sharing">ConflictsGUIToolAdvGit.pdf</a></span></p>
 <h1><span>w9</span></h1>
+<p><span>學習這幾周下來之心得</span></p>
 <p><br/><br/><br/></p>
