--- a/content/w9.html
+++ b/content/w9.html
@@ -155,6 +155,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Github. << <a href='Github..html'>Previous</a> <br /><h1>w9</h1>
+<p><span>學習這幾周下來之心得</span></p>
 <p><br/><br/><br/></p><br />Github. << <a href='Github..html'>Previous</a> </div>
         
     <!-- footer -->
