--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -66,4 +66,19 @@
 <p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1vnkDLW1cg8hKEMUdjDstvWqiS4R1n3IC/view?usp=sharing">GithubPrimer.pdf</a></span></p>
 <p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/18MiM_d95ustohAqoUfx-gc-2dUE9Av0n/view?usp=sharing">ConflictsGUIToolAdvGit.pdf</a></span></p>
 <h1><span>w9</span></h1>
-<p><br/><br/><br/></p>
+<p><span>學習這幾周下來之心得</span></p>
+<p><span>w1教我們如何建立blogger</span></p>
+<p><span>w2-4則是教我們如何用git指令建立cmsimde網站，並如何維護</span></p>
+<p><span>而w6-w9則是教學如何開直播</span></p>
+<h1>上課內容重點筆記</h1>
+<h2>電腦之硬體設備</h2>
+<p>CPU</p>
+<p>中央處理器，電腦的心臟，速度越快效果越好，若電腦為一家店，則CPU可以說是店員，反應越快越佳。</p>
+<p>記憶體RAM</p>
+<p>電腦系統運作實戰存資料的地方，其大小也是影響電腦速率快慢的重要因素。</p>
+<p>硬碟</p>
+<p>儲存系統軟體、應用軟體及資料的地方，一台主機可以裝多顆硬碟。</p>
+<h2>IPv4與IPv6之差別</h2>
+<p>IPv4的格式是32位元長度，位置能提供2的32次方個，換算後約42億個。雖然有這麼多個，但依舊被消耗殆盡。</p>
+<p><span>IPv6，他所能提供的ip位置遠遠超過IPv4的數量，簡單來說，轉換到IPv6後ip位置的數量幾乎不可能用完。</span></p>
+<p></p>
