--- a/content/w9.html
+++ b/content/w9.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li><a href='Cmsimde.html'>Cmsimde</a><li><a href='有關本網站.html'>有關本網站</a><li><a href='分組結果.html'>分組結果</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Github..html'>Github.</a></li></ul><li><a href='w9.html'>w9</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li><a href='Cmsimde.html'>Cmsimde</a><li><a href='有關本網站.html'>有關本網站</a><li><a href='分組結果.html'>分組結果</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Github..html'>Github.</a></li></ul><li><a href='w9.html'>w9</a><li class='has-children'><a href='上課內容重點筆記.html'>上課內容重點筆記</a><ul class='dropdown'><li><a href='電腦之硬體設備.html'>電腦之硬體設備</a><li><a href='IPv4與IPv6之差別.html'>IPv4與IPv6之差別</a></li></ul><li><a href='紙本筆記.html'>紙本筆記</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,9 +154,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Github. << <a href='Github..html'>Previous</a> <br /><h1>w9</h1>
+    <div id="tipue_search_content">Github. << <a href='Github..html'>Previous</a> <a href='上課內容重點筆記.html'>Next</a> >> 上課內容重點筆記<br /><h1>w9</h1>
 <p><span>學習這幾周下來之心得</span></p>
-<p><br/><br/><br/></p><br />Github. << <a href='Github..html'>Previous</a> </div>
+<p><span>w1教我們如何建立blogger</span></p>
+<p><span>w2-4則是教我們如何用git指令建立cmsimde網站，並如何維護</span></p>
+<p><span>而w6-w9則是教學如何開直播</span></p>
+<br />Github. << <a href='Github..html'>Previous</a> <a href='上課內容重點筆記.html'>Next</a> >> 上課內容重點筆記</div>
         
     <!-- footer -->
       <div class="container">
