--- a/content/w10如何用ssh.html
+++ b/content/w10如何用ssh.html
@@ -314,7 +314,7 @@ img.add_border {
 </table>
 </div>
 </div>
-<p>之後就可以透過近端的 .ppk private key 與 Github.com 上的 public key 對應, 無需輸入帳號密碼就可以進行 git push了喔。</p>
+<p>之後就可以透過近端的 .ppk private key 與 Github.com 上的 public key 對應, 無需輸入帳號密碼就可以進行 git push了喔。..</p>
 <p></p><br />紙本筆記 << <a href='紙本筆記.html'>Previous</a> </div>
         
     <!-- footer -->
