--- a/config/content.htm
+++ b/config/content.htm
@@ -243,5 +243,5 @@
 </table>
 </div>
 </div>
-<p>之後就可以透過近端的 .ppk private key 與 Github.com 上的 public key 對應, 無需輸入帳號密碼就可以進行 git push了喔。</p>
+<p>之後就可以透過近端的 .ppk private key 與 Github.com 上的 public key 對應, 無需輸入帳號密碼就可以進行 git push了喔。..</p>
 <p></p>
