--- a/content/W13.html
+++ b/content/W13.html
@@ -544,7 +544,7 @@ img.add_border {
 </table>
 </div>
 </div>
-<p>....</p><br />w10如何用ssh << <a href='w10如何用ssh.html'>Previous</a> </div>
+<p>.......</p><br />w10如何用ssh << <a href='w10如何用ssh.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
