--- a/content/有關本網站.html
+++ b/content/有關本網站.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li><a href='Cmsimde.html'>Cmsimde</a><li><a href='有關本網站.html'>有關本網站</a><li><a href='分組結果.html'>分組結果</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Github..html'>Github.</a></li></ul><li><a href='w9.html'>w9</a><li class='has-children'><a href='上課內容重點筆記.html'>上課內容重點筆記</a><ul class='dropdown'><li><a href='電腦之硬體設備.html'>電腦之硬體設備</a><li><a href='IPv4與IPv6之差別.html'>IPv4與IPv6之差別</a></li></ul><li><a href='紙本筆記.html'>紙本筆記</a><li><a href='w10如何用ssh.html'>w10如何用ssh</a><li><a href='W13.html'>W13</a></li>
+                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法:.html'>利用 cmsimde 建立靜態網誌方法:</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Cmsimde.html'>Cmsimde</a><ul class='dropdown'><li><a href='如何使用 CMSiMDE.html'>如何使用 CMSiMDE</a></li></li></ul></ul><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Github..html'>Github.</a></li></ul><li class='has-children'><a href='上課內容重點筆記.html'>上課內容重點筆記</a><ul class='dropdown'><li><a href='proxy.html'>proxy</a><li><a href='NAT.html'>NAT</a><li class='has-children'><a href='電腦之硬體設備.html'>電腦之硬體設備</a><ul class='dropdown'><li><a href='CPU.html'>CPU</a><li><a href='記憶體RAM.html'>記憶體RAM</a><li><a href='硬碟.html'>硬碟</a></li></ul><li class='has-children'><a href='IPv4與IPv6之差別.html'>IPv4與IPv6之差別</a><ul class='dropdown'><li><a href='IPv4.html'>IPv4</a><li><a href='IPv6.html'>IPv6</a></li></ul><li><a href='紙本筆記.html'>紙本筆記</a></li></ul><li class='has-children'><a href='課程進度.html'>課程進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='w10如何用ssh.html'>w10如何用ssh</a><li><a href='W13.html'>W13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,22 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Cmsimde << <a href='Cmsimde.html'>Previous</a> <a href='分組結果.html'>Next</a> >> 分組結果<br /><h1>有關本網站</h1>
-<p>這門課程在教導學員如何利用網際環境管理與工程應用相關的內容管理.</p>
-<p>總共使用兩套網際內容管理系統:</p>
-<p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a></p>
-<p><a href="https://www.blogger.com/">https://www.blogger.com/</a></p>
-<p>Please use your student number to<span> </span><a href="https://github.com/join">register a github account</a>.</p>
-<p>請利用學號註冊一個 Github 帳號</p>
-<p>Repository (倉儲):<span> </span><a href="https://github.com/mdecourse/wcmj2020">https://github.com/mdecourse/wcmj2020</a> </p>
-<p>Project (專案):<span> </span><a href="https://github.com/mdecourse/wcmj2020/projects/1">https://github.com/mdecourse/wcmj2020/projects/1</a> </p>
-<p>Gitter (討論區):<span> </span><a href="https://gitter.im/mdecourse/wcmj2020">https://gitter.im/mdecourse/wcmj2020</a> </p>
-<p>Web site (網站): <a href="https://mde.tw/wcmj2020">https://mde.tw/wcmj2020</a> </p>
-<p>Blog (網誌):<span> </span><a href="https://mde.tw/wcmj2020/blog">https://mde.tw/wcmj2020/blog</a> </p>
-<p>Presentation (簡報):<span> </span><a href="https://mde.tw/wcmj2020/reveal">https://mde.tw/wcmj2020/reveal</a> </p>
-<p>電腦輔助設計室與協同設計室行事曆</p>
-<p><span style="color: #ff00ff;"></span></p>
-<br />Cmsimde << <a href='Cmsimde.html'>Previous</a> <a href='分組結果.html'>Next</a> >> 分組結果</div>
+    <div id="tipue_search_content"> <a href='About.html'>Next</a> >> About<br /><h1>有關本網站</h1>
+<p>這裡是50833106的紀錄學習歷程網站</p>
+<p><img alt="" height="141" src="./../images/20191121004812.png" width="250"/></p>
+<br /> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
