--- a/content/proxy.html
+++ b/content/proxy.html
@@ -154,10 +154,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法<br /><h1>About</h1>
-<p><img alt="" height="199" src="./../images/小貓咪.jpg" width="211"/></p>
-<p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<br />有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法</div>
+    <div id="tipue_search_content">上課內容重點筆記 << <a href='上課內容重點筆記.html'>Previous</a> <a href='NAT.html'>Next</a> >> NAT<br /><h1>proxy</h1>
+<p><b>代理</b>（英語：<span lang="en">Proxy</span>）也稱<b>網路代理</b>，是一種特殊的網路服務，允許一個<a class="new" href="https://zh.wikipedia.org/w/index.php?title=%E7%BD%91%E7%BB%9C%E7%BB%88%E7%AB%AF&amp;action=edit&amp;redlink=1" title="網路終端（頁面不存在）">網路終端</a>（一般為<a href="https://zh.wikipedia.org/wiki/%E5%AE%A2%E6%88%B7%E7%AB%AF" title="客戶端">客戶端</a>）通過這個服務與另一個<a class="new" href="https://zh.wikipedia.org/w/index.php?title=%E7%BD%91%E7%BB%9C%E7%BB%88%E7%AB%AF&amp;action=edit&amp;redlink=1" title="網路終端（頁面不存在）">網路終端</a>（一般為<a href="https://zh.wikipedia.org/wiki/%E6%9C%8D%E5%8A%A1%E5%99%A8" title="伺服器">伺服器</a>）進行非直接的連接。一些<a href="https://zh.wikipedia.org/wiki/%E7%BD%91%E5%85%B3" title="閘道器">閘道器</a>、<a href="https://zh.wikipedia.org/wiki/%E8%B7%AF%E7%94%B1%E5%99%A8" title="路由器">路由器</a>等網路裝置具備網路代理功能。一般認為代理服務有利於保障網路終端的隱私或安全，防止攻擊。</p>
+<p>提供代理服務的電腦系統或其它類型的網路終端稱為代理伺服器（英文：Proxy Server）。一個完整的代理請求過程為：<a href="https://zh.wikipedia.org/wiki/%E5%AE%A2%E6%88%B7%E7%AB%AF" title="客戶端">客戶端</a>首先與代理伺服器建立連接，接著根據代理伺服器所使用的代理協定，請求對目標伺服器建立連接、或者獲得目標伺服器的指定資源（如：檔案）。在後一種情況中，代理伺服器可能對目標伺服器的資源下載至本地<a href="https://zh.wikipedia.org/wiki/%E7%BC%93%E5%AD%98" title="快取">快取</a>，如果客戶端所要取得的資源在代理伺服器的快取之中，則代理伺服器並不會向目標伺服器傳送請求，而是直接傳回已快取的資源。一些代理協定允許代理伺服器改變客戶端的原始請求、目標伺服器的原始回應，以滿足代理協定的需要。代理伺服器的選項和設定在電腦程式中，通常包括一個「防火牆」，允許用戶輸入代理位址，它會遮蓋他們的網路活動，可以允許繞過網際網路過濾實現網路存取。</p>
+<p>代理伺服器的基本行為就是接收客戶端傳送的請求後轉發給其他伺服器。代理不改變請求<a class="mw-redirect" href="https://zh.wikipedia.org/wiki/URI" title="URI">URI</a>，會直接傳送給前方持有資源的目標伺服器。</p>
+<p>持有資源實體的伺服器被稱為<b>源伺服器</b>。從源伺服器返回的回應經過代理伺服器後再傳給客戶端。</p>
+<br />上課內容重點筆記 << <a href='上課內容重點筆記.html'>Previous</a> <a href='NAT.html'>Next</a> >> NAT</div>
         
     <!-- footer -->
       <div class="container">
