--- a/content/CPU.html
+++ b/content/CPU.html
@@ -154,10 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法<br /><h1>About</h1>
-<p><img alt="" height="199" src="./../images/小貓咪.jpg" width="211"/></p>
-<p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<br />有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法</div>
+    <div id="tipue_search_content">電腦之硬體設備 << <a href='電腦之硬體設備.html'>Previous</a> <a href='記憶體RAM.html'>Next</a> >> 記憶體RAM<br /><h1>CPU</h1>
+<p>中央處理器，電腦的心臟，速度越快效果越好，若電腦為一家店，則CPU可以說是店員，反應越快越佳。</p>
+<br />電腦之硬體設備 << <a href='電腦之硬體設備.html'>Previous</a> <a href='記憶體RAM.html'>Next</a> >> 記憶體RAM</div>
         
     <!-- footer -->
       <div class="container">
