--- a/content/Cmsimde.html
+++ b/content/Cmsimde.html
@@ -154,10 +154,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法<br /><h1>About</h1>
-<p><img alt="" height="199" src="./../images/小貓咪.jpg" width="211"/></p>
-<p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<br />有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法</div>
+    <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <a href='如何使用 CMSiMDE.html'>Next</a> >> 如何使用 CMSiMDE<br /><h1>Cmsimde</h1>
+<p><a href="https://github.com/mdecourse/cmsimde.git">https://github.com/mdecourse/cmsimde.git</a><span> </span>是一套利用 Python 解譯程式語言所編寫的網際內容管理系統, 使用者可以用來建立動態網站, 靜態網站, 網誌與網際簡報系統.</p>
+<p>程式語言就其執行的方式, 可以分為編譯式與解譯式等兩種.</p>
+<p>編譯式語言例如: C 程式語言</p>
+<p>解譯式語言例如: Python 程式語言</p>
+<p>編寫程式語言是工程師與電腦溝通的途徑之一, 工程師編寫計算機程式在電腦上執行, 可以透過電腦強大與重複的運算能力來解決問題.</p>
+<p>CMSiMDE 就是工程師希望將各種與產品開發的過程資料, 存放在網站上, 除了可用於工程師之間的溝通外, 還能夠將產品開發的細節, 或者特定工具的使用詳細記錄, 以作為往後的參考.</p>
+<br />Develop << <a href='Develop.html'>Previous</a> <a href='如何使用 CMSiMDE.html'>Next</a> >> 如何使用 CMSiMDE</div>
         
     <!-- footer -->
       <div class="container">
