--- a/content/Develop.html
+++ b/content/Develop.html
@@ -154,10 +154,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法<br /><h1>About</h1>
-<p><img alt="" height="199" src="./../images/小貓咪.jpg" width="211"/></p>
-<p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<br />有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法</div>
+    <div id="tipue_search_content">利用 cmsimde 建立靜態網誌方法 << <a href='利用 cmsimde 建立靜態網誌方法.html'>Previous</a> <a href='Cmsimde.html'>Next</a> >> Cmsimde<br /><h1>Develop</h1>
+<p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
+<p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
+<p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數.</p>
+<br />利用 cmsimde 建立靜態網誌方法 << <a href='利用 cmsimde 建立靜態網誌方法.html'>Previous</a> <a href='Cmsimde.html'>Next</a> >> Cmsimde</div>
         
     <!-- footer -->
       <div class="container">
