--- a/content/上課內容重點筆記.html
+++ b/content/上課內容重點筆記.html
@@ -154,10 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法<br /><h1>About</h1>
-<p><img alt="" height="199" src="./../images/小貓咪.jpg" width="211"/></p>
-<p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<br />有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法</div>
+    <div id="tipue_search_content">Github << <a href='Github.html'>Previous</a> <a href='proxy.html'>Next</a> >> proxy<br /><h1>上課內容重點筆記</h1>
+<p><img alt="情報】官方提供的鬼滅之刃各種GIF圖@鬼滅之刃哈啦板- 巴哈姆特" height="321" src="https://img.gifmagazine.net/gifmagazine/images/3902338/original.gif" width="401"/></p>
+<br />Github << <a href='Github.html'>Previous</a> <a href='proxy.html'>Next</a> >> proxy</div>
         
     <!-- footer -->
       <div class="container">
