--- a/content/主題.html
+++ b/content/主題.html
@@ -154,10 +154,21 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法<br /><h1>About</h1>
-<p><img alt="" height="199" src="./../images/小貓咪.jpg" width="211"/></p>
-<p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<br />有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法</div>
+    <div id="tipue_search_content">如何使用 CMSiMDE << <a href='如何使用 CMSiMDE.html'>Previous</a> <a href='Github.html'>Next</a> >> Github<br /><h1>主題</h1>
+<h4>Google Blogger</h4>
+<p>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/12Ypf02FVP9l7a9ufZfhRicN-rzCKkAf5/view?usp=sharing">2010_BeginningGoogleBlogger.pdf</a></p>
+<h4>WCM</h4>
+<p>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1gLb9_6FEv58wVX2uShG_3sgUseFEcH_y/view?usp=sharing">2020wcm_topic_1.pdf</a>.</p>
+<p>What is a content management system?</p>
+<p>Analyzing your information life cycle.</p>
+<p>Overview of enterprise content management.</p>
+<h4><span>Git</span></h4>
+<p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1YkLWsDVRlScSuSBQv2Aa1JSjvbydJli-/view?usp=sharing">IntroductionToVersionControlAndGit.pdf</a>.</span></p>
+<p><span>What is version control?</span></p>
+<p><span>Git installation and setup.</span></p>
+<p><span>Git getting started.</span></p>
+<p><span>Commits and remote git.</span></p>
+<br />如何使用 CMSiMDE << <a href='如何使用 CMSiMDE.html'>Previous</a> <a href='Github.html'>Next</a> >> Github</div>
         
     <!-- footer -->
       <div class="container">
