--- a/content/紙本筆記.html
+++ b/content/紙本筆記.html
@@ -154,10 +154,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法<br /><h1>About</h1>
-<p><img alt="" height="199" src="./../images/小貓咪.jpg" width="211"/></p>
-<p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<br />有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法</div>
+    <div id="tipue_search_content">IPv6 << <a href='IPv6.html'>Previous</a> <a href='課程進度.html'>Next</a> >> 課程進度<br /><h1>紙本筆記</h1>
+<p><span><img alt="" height="563" src="./../images/IMG_6248.JPG" width="422"/><img alt="" height="533" src="./../images/IMG_6249.JPG" width="400"/><img alt="" height="533" src="./../images/IMG_6250.JPG" width="400"/><img alt="" height="533" src="./../images/IMG_6251.JPG" width="400"/></span></p>
+<p><span></span></p>
+<div>
+<div class="syntaxhighlighter py" id="highlighter_906297">
+<table border="0" cellpadding="0" cellspacing="0">
+<tbody>
+<tr>
+<td class="code">
+<br />IPv6 << <a href='IPv6.html'>Previous</a> <a href='課程進度.html'>Next</a> >> 課程進度</div>
         
     <!-- footer -->
       <div class="container">
