--- a/content/記憶體RAM.html
+++ b/content/記憶體RAM.html
@@ -154,10 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法<br /><h1>About</h1>
-<p><img alt="" height="199" src="./../images/小貓咪.jpg" width="211"/></p>
-<p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<br />有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法</div>
+    <div id="tipue_search_content">CPU << <a href='CPU.html'>Previous</a> <a href='硬碟.html'>Next</a> >> 硬碟<br /><h1>記憶體RAM</h1>
+<p>電腦系統運作實戰存資料的地方，其大小也是影響電腦速率快慢的重要因素。</p>
+<br />CPU << <a href='CPU.html'>Previous</a> <a href='硬碟.html'>Next</a> >> 硬碟</div>
         
     <!-- footer -->
       <div class="container">
