--- a/config/content.htm
+++ b/config/content.htm
@@ -84,7 +84,8 @@
 <p><br/><br/></p>
 <h1 class="container">課程進度</h1>
 <p><img alt="Screaming My Neighbor Totoro GIF by O&amp;O, Inc - Find &amp; Share on GIPHY" src="https://media0.giphy.com/media/l41m3G139gE7e3JXq/source.gif"/></p>
-<p>w1</p>
+<h2>w1</h2>
+<p></p>
 <p>建立blogger</p>
 <p>課程小單字</p>
 <div class="kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
@@ -102,8 +103,7 @@
 <div dir="auto">DHCP動態網路位置</div>
 </div>
 <p></p>
-<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
-<h2 dir="auto">w2</h2>
+<br/><br/><br/>w2
 <p><span>課程小筆記</span></p>
 <div class="kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
 <div dir="auto">IPv4 version 4 IP 四個區段,用.隔開</div>
@@ -112,7 +112,7 @@
 <div dir="auto">[2001:288:6004:17::42]:3128 140.130.17.53:254(系gateway通道)</div>
 <div dir="auto">[2001:288:6004:17::17]:3128 140.130.1.*(校主幹)</div>
 <div dir="auto">[2001:288:6004:17::7]:3128</div>
-<div dir="auto">-----------------------------------------------------------------------------------------------------------------</div>
+<div dir="auto"></div>
 <div dir="auto">課程小單字</div>
 <div dir="auto">tcp/ip==trandmision control protocol/internet protocol</div>
 </div>
@@ -148,8 +148,7 @@
 </div>
 <div dir="auto"></div>
 </div>
-</div>
-<p><br/><br/><br/><br/><br/>w3<span>建立可攜式環境</span></p>
+<p><br/><br/><br/><br/><br/><br/><br/>w3<span>建立可攜式環境</span></p>
 <p>建立可攜式環境</p>
 <p>為了讓工程師可以在不同的 Windows 10 64 位元電腦上管理 CMSiMDE 網際內容管理系統, 因此需要 Python 解譯環境以及一個文字檔案的編輯器.</p>
 <p>這裡所安裝的 Python 解譯器選擇由 C 所編寫的 CPython, 可以從<span> </span><a href="https://www.python.org/">https://www.python.org/</a>  下載安裝. 但是在此我們要將 Python 解譯系統配置在 USB 隨身碟上, 使用者可以隨身攜帶, 一旦配置完成後, 可以在任何一台 Windows 10 64 位元的筆電或電腦上執行 Python 或 C 程式.</p>
@@ -161,9 +160,8 @@
 <p>建立完成的可攜程式環境:</p>
 <p>下載<span> </span><a href="https://drive.google.com/open?id=1xDTDfcHU18ipqZNbOufMkSZqibqNeL2T">wcmj2020_tool.7z</a>, 檔案大小為 435 MB, 解開壓縮後為 1.8 GB (其中包括 Mypaint, Dia 與 OBS 等)</p>
 <p>將 wcmj2020_tool.7z 解壓縮到隨身碟或電腦硬碟中, 將 home 與 home_ipv6 目錄中的 .gitconfig user.name 與 user.email 改為自己的 Github 帳號與 email 後, 利用 start.bat 啟動可攜系統, 利用 stop.bat 關閉可攜系統.</p>
-<p><br/><br/><br/>w4<span>建網站</span></p>
+<p><br/><br/><br/><br/><br/>w4建網站</p>
 <div class="kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
-<div dir="auto">建網站</div>
 <div dir="auto">此內容管理系統以 https:..github.com.mdecourse.cmsimde 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</div>
 </div>
 <div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
@@ -187,7 +185,7 @@
 <div dir="auto">之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</div>
 <div dir="auto">git clone --recurse-submodules https:..github.com.mdecourse.newcms.git</div>
 </div>
-<h3>w5</h3>
+<h2>w5</h2>
 <div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
 <div dir="auto">筆記</div>
 <div dir="auto">firmwarre 韌體</div>
@@ -249,7 +247,45 @@
 <div dir="auto">device 物件</div>
 <div dir="auto">graphics 圖形</div>
 <div dir="auto"></div>
-<h3 dir="auto">w6</h3>
+<h2 dir="auto">w6</h2>
+<div class="kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">portable obs</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">google hangout meet</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">streeming and recording</div>
+<div dir="auto">-----------------------------------------------------------------------------------------------------------------</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">讓手機可以利用電腦熱點上網：</div>
+<div dir="auto">採用 https://www.tp-link.com/us/home-networking/usb-adapter/tl-wn725n/</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">將此一 USB Wifi adapter 連接電腦後, 若網路為 IPv4 協定時, 可以透過"設定 -&gt; 網路和網際網路 -&gt; 行動熱點", 選擇開啟並編輯"網路名稱與網路密碼"後, 讓至多 8 台手機透過熱點連線上網。</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">但是因為目前 Windows 10 並未提供 IPv6 網路協定下的網路熱點功能, 因此在純 IPv6 網路協定下無法使用"行動熱點"服務。</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">利用手機鏡頭當作 webcam:</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">Android: https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows</div>
+<div dir="auto">iPhone: https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto"></div>
+<div dir="auto">需要 clone 個人倉儲時：</div>
+<div dir="auto">git clone --recurse-submodules 倉儲_url.git</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">例如: git clone --recurse-submodules https://github.com/mdecourse/wcmj2020.git</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">現場直播的 audio 錄音設定</div>
+<div dir="auto">在電腦輔助設計室進行直播時, 由於現場有擴音設備, 因此採用 OBS 串流至 Youtube 的最佳收音並非從 Webcam 的麥克風, 而是從擴音器以 audio outpu 連接到電腦的麥克風插槽, 然後將 OBS 的 audio 設定為從電腦的麥克風收音.</div>
 </div>
 </div>
 </div>
@@ -257,14 +293,15 @@
 </div>
 </div>
 </div>
-<h3>w7</h3>
-<h3>w8</h3>
-<h3>w9</h3>
+</div>
+<h2>w7</h2>
+<h2>w8</h2>
+<h2>w9</h2>
 <p><span>學習這幾周下來之心得</span></p>
 <p><span>w1教我們如何建立blogger</span></p>
 <p><span>w2-4則是教我們如何用git指令建立cmsimde網站，並如何維護</span></p>
 <p><span>而w6-w9則是教學如何開直播</span></p>
-<h3><span>w10如何用ssh</span></h3>
+<h2><span>w10如何用ssh</span></h2>
 <p>由於在電腦教室時採用純 IPv6 協定上網, 因此為了能夠在近端將倉儲改版資料推送到目前只接受 IPv4 協定連線的 github, 以下除了將原本以 https 對 github 連線, 改為以 ssh 協定連線外, 在 Windows 環境下必須利用 putty 與 plink, 設定 putty 格式的 .ppk 以及能夠同時支援 IPv4 與 IPv6 的代理主機.</p>
 <p>設定步驟如下:</p>
 <p>1. 下載 Putty 工具組</p>
