--- a/content/w2.html
+++ b/content/w2.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Cmsimde.html'>Cmsimde</a><ul class='dropdown'><li><a href='如何使用 CMSiMDE.html'>如何使用 CMSiMDE</a></li></li></ul></ul><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Github.html'>Github</a></li></ul><li class='has-children'><a href='上課內容重點筆記.html'>上課內容重點筆記</a><ul class='dropdown'><li><a href='proxy.html'>proxy</a><li><a href='NAT.html'>NAT</a><li class='has-children'><a href='電腦之硬體設備.html'>電腦之硬體設備</a><ul class='dropdown'><li><a href='CPU.html'>CPU</a><li><a href='記憶體RAM.html'>記憶體RAM</a><li><a href='硬碟.html'>硬碟</a></li></ul><li class='has-children'><a href='IPv4與IPv6之差別.html'>IPv4與IPv6之差別</a><ul class='dropdown'><li><a href='IPv4.html'>IPv4</a><li><a href='IPv6.html'>IPv6</a></li></ul><li><a href='紙本筆記.html'>紙本筆記</a></li></ul><li class='has-children'><a href='課程進度.html'>課程進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='w10如何用ssh.html'>w10如何用ssh</a><li><a href='W13.html'>W13</a></li>
+                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Cmsimde.html'>Cmsimde</a><ul class='dropdown'><li><a href='如何使用 CMSiMDE.html'>如何使用 CMSiMDE</a></li></li></ul></ul><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Github.html'>Github</a></li></ul><li class='has-children'><a href='上課內容重點筆記.html'>上課內容重點筆記</a><ul class='dropdown'><li><a href='proxy.html'>proxy</a><li><a href='NAT.html'>NAT</a><li class='has-children'><a href='電腦之硬體設備.html'>電腦之硬體設備</a><ul class='dropdown'><li><a href='CPU.html'>CPU</a><li><a href='記憶體RAM.html'>記憶體RAM</a><li><a href='硬碟.html'>硬碟</a></li></ul><li class='has-children'><a href='IPv4與IPv6之差別.html'>IPv4與IPv6之差別</a><ul class='dropdown'><li><a href='IPv4.html'>IPv4</a><li><a href='IPv6.html'>IPv6</a></li></ul><li><a href='紙本筆記.html'>紙本筆記</a></li></ul><li class='has-children'><a href='課程進度.html'>課程進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3建立可攜式環境.html'>w3建立可攜式環境</a><li><a href='w4建網站.html'>w4建網站</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7-8.html'>w7-8</a><li><a href='w9期中考.html'>w9期中考</a><li><a href='w10-12如何用ssh.html'>w10-12如何用ssh</a><li><a href='W13.html'>W13</a><li><a href='w14.html'>w14</a><li><a href='w15-18統整.html'>w15-18統整</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,8 +154,53 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w6 << <a href='w6.html'>Previous</a> <a href='w8.html'>Next</a> >> w8<br /><h1>w7</h1>
-<br />w6 << <a href='w6.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
+    <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <a href='w3建立可攜式環境.html'>Next</a> >> w3建立可攜式環境<br /><h1>w2</h1>
+<p><span>課程小筆記</span></p>
+<div class="kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">IPv4 version 4 IP 四個區段,用.隔開</div>
+<div dir="auto">IPv6 version 6 IP 八個區段,用:隔開</div>
+<div dir="auto">[2001:288:6004:17::53]:3128 140.130.17.53:3128</div>
+<div dir="auto">[2001:288:6004:17::42]:3128 140.130.17.53:254(系gateway通道)</div>
+<div dir="auto">[2001:288:6004:17::17]:3128 140.130.1.*(校主幹)</div>
+<div dir="auto">[2001:288:6004:17::7]:3128</div>
+<div dir="auto"></div>
+<div dir="auto">課程小單字</div>
+<div dir="auto">tcp/ip==trandmision control protocol/internet protocol</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">inter-net==inter-national(國際)</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">(網際,inter+networt)</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">protocal 協定
+<div dir="auto">microscope 顯微鏡</div>
+<div dir="auto">telescope 望遠鏡
+<div dir="auto">
+<div dir="auto">trasmit 傳輸</div>
+<div dir="auto">data 資料</div>
+</div>
+<div dir="auto">packet 封包</div>
+</div>
+</div>
+<div dir="auto"></div>
+<div dir="auto">control 控制
+<div dir="auto">macro 巨(比原子(atom)大)</div>
+<div dir="auto">atomic bomb 原子彈中華電信 dns. server. dns==domain name server 符號名稱伺服器</div>
+</div>
+<div dir="auto">version 版本(短時間)</div>
+<div dir="auto">edition 版本(長時間)</div>
+<div dir="auto">router 路由器</div>
+<div dir="auto">route 路徑</div>
+<div dir="auto">remote login 遠端登入</div>
+<div dir="auto">
+<div dir="auto">micro 微</div>
+</div>
+<div dir="auto"></div>
+</div>
+<p></p>
+<br />w1 << <a href='w1.html'>Previous</a> <a href='w3建立可攜式環境.html'>Next</a> >> w3建立可攜式環境</div>
         
     <!-- footer -->
       <div class="container">
