--- a/content/w7-8.html
+++ b/content/w7-8.html
@@ -154,11 +154,36 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">主題 << <a href='主題.html'>Previous</a> <a href='上課內容重點筆記.html'>Next</a> >> 上課內容重點筆記<br /><h1>Github</h1>
-<p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1vnkDLW1cg8hKEMUdjDstvWqiS4R1n3IC/view?usp=sharing">GithubPrimer.pdf</a></span></p>
-<p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/18MiM_d95ustohAqoUfx-gc-2dUE9Av0n/view?usp=sharing">ConflictsGUIToolAdvGit.pdf</a></span></p>
-<p><span></span></p>
-<br />主題 << <a href='主題.html'>Previous</a> <a href='上課內容重點筆記.html'>Next</a> >> 上課內容重點筆記</div>
+    <div id="tipue_search_content">w6 << <a href='w6.html'>Previous</a> <a href='w9期中考.html'>Next</a> >> w9期中考<br /><h1>w7-8</h1>
+<p> <span>grouping and meeting</span></p>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">第三組group3</div>
+<div dir="auto">50833104 組長</div>
+<div dir="auto">50833106</div>
+<div dir="auto">50833113</div>
+<div dir="auto">50833114</div>
+<div dir="auto">50833116</div>
+<div dir="auto">50833118</div>
+<div dir="auto">50833120</div>
+<div dir="auto">50833125</div>
+<div dir="auto">50833140</div>
+<div dir="auto">50833141</div>
+<div dir="auto">
+<div class="kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto"></div>
+<div dir="auto">proxy</div>
+<div dir="auto"></div>
+<div dir="auto">2001:288:6004:17::53</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">2001:288:6004:17::42</div>
+<div dir="auto">2001:288:6004:17::17</div>
+<div dir="auto">2001:288:6004:17::4 "虛擬主機 可以校外連接"</div>
+<div dir="auto"></div>
+</div>
+</div>
+<div dir="auto">下周可能線上上課</div>
+</div><br />w6 << <a href='w6.html'>Previous</a> <a href='w9期中考.html'>Next</a> >> w9期中考</div>
         
     <!-- footer -->
       <div class="container">
