--- a/config/content.htm
+++ b/config/content.htm
@@ -4,7 +4,7 @@
 <h1>About</h1>
 <p><img alt="" height="199" src="/images/小貓咪.jpg" width="211"/></p>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<h2><span style="color: #ffff00;">利用 cmsimde 建立靜態網誌方法</span></h2>
+<h2>利用 cmsimde 建立靜態網誌方法</h2>
 <p>1. 在 github 建立倉儲, git clone 到近端</p>
 <p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
 <p>以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> cmsimde</p>
@@ -50,7 +50,7 @@
 <p><span>Git installation and setup.</span></p>
 <p><span>Git getting started.</span></p>
 <p><span>Commits and remote git.</span></p>
-<h3><span>Github</span></h3>
+<h3>Github</h3>
 <p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1vnkDLW1cg8hKEMUdjDstvWqiS4R1n3IC/view?usp=sharing">GithubPrimer.pdf</a></span></p>
 <p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/18MiM_d95ustohAqoUfx-gc-2dUE9Av0n/view?usp=sharing">ConflictsGUIToolAdvGit.pdf</a></span></p>
 <p><span></span></p>
@@ -71,18 +71,18 @@
 <h3>硬碟</h3>
 <p>儲存系統軟體、應用軟體及資料的地方，一台主機可以裝多顆硬碟。</p>
 <h2>IPv4與IPv6之差別</h2>
-<h3><span>IPv4</span></h3>
+<h3>IPv4</h3>
 <p>IPv4的格式是32位元長度，位置能提供2的32次方個，換算後約42億個。雖然有這麼多個，但依舊被消耗殆盡。</p>
-<h3><span>IPv6</span></h3>
+<h3>IPv6</h3>
 <p><span>IPv6，他所能提供的ip位置遠遠超過IPv4的數量，簡單來說，轉換到IPv6後ip位置的數量幾乎不可能用完。</span></p>
-<h2><span>紙本筆記</span></h2>
+<h2>紙本筆記</h2>
 <p><span><img alt="" height="563" src="/images/IMG_6248.JPG" width="422"/><img alt="" height="533" src="/images/IMG_6249.JPG" width="400"/><img alt="" height="533" src="/images/IMG_6250.JPG" width="400"/><img alt="" height="533" src="/images/IMG_6251.JPG" width="400"/></span></p>
 <p><span></span></p>
 <div>
 <div class="syntaxhighlighter py" id="highlighter_906297"></div>
 </div>
 <p><br/><br/></p>
-<h1 class="container">課程進度</h1>
+<h1>課程進度</h1>
 <p><img alt="Screaming My Neighbor Totoro GIF by O&amp;O, Inc - Find &amp; Share on GIPHY" src="https://media0.giphy.com/media/l41m3G139gE7e3JXq/source.gif"/></p>
 <h2>w1</h2>
 <p></p>
@@ -101,9 +101,7 @@
 <div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
 <div dir="auto">Port 埠號</div>
 <div dir="auto">DHCP動態網路位置</div>
-</div>
-<p></p>
-<br/><br/><br/>w2
+</div><h2>w2</h2>
 <p><span>課程小筆記</span></p>
 <div class="kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
 <div dir="auto">IPv4 version 4 IP 四個區段,用.隔開</div>
@@ -148,7 +146,9 @@
 </div>
 <div dir="auto"></div>
 </div>
-<p><br/><br/><br/><br/><br/><br/><br/>w3<span>建立可攜式環境</span></p>
+<p></p>
+<h2>w3建立可攜式環境</h2>
+<p></p>
 <p>建立可攜式環境</p>
 <p>為了讓工程師可以在不同的 Windows 10 64 位元電腦上管理 CMSiMDE 網際內容管理系統, 因此需要 Python 解譯環境以及一個文字檔案的編輯器.</p>
 <p>這裡所安裝的 Python 解譯器選擇由 C 所編寫的 CPython, 可以從<span> </span><a href="https://www.python.org/">https://www.python.org/</a>  下載安裝. 但是在此我們要將 Python 解譯系統配置在 USB 隨身碟上, 使用者可以隨身攜帶, 一旦配置完成後, 可以在任何一台 Windows 10 64 位元的筆電或電腦上執行 Python 或 C 程式.</p>
@@ -160,7 +160,8 @@
 <p>建立完成的可攜程式環境:</p>
 <p>下載<span> </span><a href="https://drive.google.com/open?id=1xDTDfcHU18ipqZNbOufMkSZqibqNeL2T">wcmj2020_tool.7z</a>, 檔案大小為 435 MB, 解開壓縮後為 1.8 GB (其中包括 Mypaint, Dia 與 OBS 等)</p>
 <p>將 wcmj2020_tool.7z 解壓縮到隨身碟或電腦硬碟中, 將 home 與 home_ipv6 目錄中的 .gitconfig user.name 與 user.email 改為自己的 Github 帳號與 email 後, 利用 start.bat 啟動可攜系統, 利用 stop.bat 關閉可攜系統.</p>
-<p><br/><br/><br/><br/><br/>w4建網站</p>
+<p><br/><br/><br/><br/></p>
+<h2>w4建網站</h2>
 <div class="kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
 <div dir="auto">此內容管理系統以 https:..github.com.mdecourse.cmsimde 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</div>
 </div>
@@ -247,7 +248,8 @@
 <div dir="auto">device 物件</div>
 <div dir="auto">graphics 圖形</div>
 <div dir="auto"></div>
-<h2 dir="auto">w6</h2>
+<h2>w6</h2>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql"> <span>portable obs教學</span>
 <div class="kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
 <div dir="auto">portable obs</div>
 </div>
@@ -256,7 +258,7 @@
 </div>
 <div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
 <div dir="auto">streeming and recording</div>
-<div dir="auto">-----------------------------------------------------------------------------------------------------------------</div>
+<div dir="auto">---------------------------------------------------------------------------------------------------------------</div>
 </div>
 <div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
 <div dir="auto">讓手機可以利用電腦熱點上網：</div>
@@ -288,20 +290,42 @@
 <div dir="auto">在電腦輔助設計室進行直播時, 由於現場有擴音設備, 因此採用 OBS 串流至 Youtube 的最佳收音並非從 Webcam 的麥克風, 而是從擴音器以 audio outpu 連接到電腦的麥克風插槽, 然後將 OBS 的 audio 設定為從電腦的麥克風收音.</div>
 </div>
 </div>
+<p></p>
+<h2>w7-8</h2>
+<p> <span>grouping and meeting</span></p>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">第三組group3</div>
+<div dir="auto">50833104 組長</div>
+<div dir="auto">50833106</div>
+<div dir="auto">50833113</div>
+<div dir="auto">50833114</div>
+<div dir="auto">50833116</div>
+<div dir="auto">50833118</div>
+<div dir="auto">50833120</div>
+<div dir="auto">50833125</div>
+<div dir="auto">50833140</div>
+<div dir="auto">50833141</div>
+<div dir="auto">
+<div class="kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto"></div>
+<div dir="auto">proxy</div>
+<div dir="auto"></div>
+<div dir="auto">2001:288:6004:17::53</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">2001:288:6004:17::42</div>
+<div dir="auto">2001:288:6004:17::17</div>
+<div dir="auto">2001:288:6004:17::4 "虛擬主機 可以校外連接"</div>
+<div dir="auto"></div>
 </div>
 </div>
-</div>
-</div>
-</div>
-</div>
-<h2>w7</h2>
-<h2>w8</h2>
-<h2>w9</h2>
+<div dir="auto">下周可能線上上課</div>
+</div><h2>w9期中考</h2>
 <p><span>學習這幾周下來之心得</span></p>
 <p><span>w1教我們如何建立blogger</span></p>
 <p><span>w2-4則是教我們如何用git指令建立cmsimde網站，並如何維護</span></p>
 <p><span>而w6-w9則是教學如何開直播</span></p>
-<h2><span>w10如何用ssh</span></h2>
+<h2>w10-12如何用ssh</h2>
 <p>由於在電腦教室時採用純 IPv6 協定上網, 因此為了能夠在近端將倉儲改版資料推送到目前只接受 IPv4 協定連線的 github, 以下除了將原本以 https 對 github 連線, 改為以 ssh 協定連線外, 在 Windows 環境下必須利用 putty 與 plink, 設定 putty 格式的 .ppk 以及能夠同時支援 IPv4 與 IPv6 的代理主機.</p>
 <p>設定步驟如下:</p>
 <p>1. 下載 Putty 工具組</p>
@@ -463,7 +487,6 @@
 </div>
 <p>之後就可以透過近端的 .ppk private key 與 Github.com 上的 public key 對應, 無需輸入帳號密碼就可以進行 git push了喔。</p>
 <h2>W13</h2>
-<p>Pelican Blog 內容與 Google Blogger 同步</p>
 <p>利用 Windows 10 設定 -&gt; 選擇預設網頁瀏覽器, 使用 Google Chrome 作為預設瀏覽器.</p>
 <p>隨身程式系統必須安裝 <span>google-api-python-client 與 oauth2client</span><br/><br/>pip install google-api-python-client oauth2client<br/><br/>OAuth 2.0 client IDs 程式類別可以選擇 other<br/><br/>使用者完成 client_secrets.json 設定後, 必須將檔案存在倉儲目錄外部</p>
 <p>add_to_blogger 按鈕內容:</p>
@@ -850,6 +873,26 @@
 </tr>
 </tbody>
 </table>
-<p></p>
 </div>
+</div><h2>w14</h2>
+<p>直接在操作系統建立網際內容管理合用系統</p>
+<p>Windows 10 64 位元操作系統</p>
+<p>安裝 Python 3.8.3 與 pip</p>
+<p>至 <a href="https://www.python.org/downloads/windows/">https://www.python.org/downloads/windows/</a> 下載 Python 3.8.3<span> </span><a href="https://www.python.org/ftp/python/3.8.3/python-3.8.3-amd64.exe">Windows x86-64 executable installer</a></p>
+<p>可以直接選擇安裝 pip 與所有選項內容</p>
+<p>安裝 Git</p>
+<p>利用 <a href="https://github.com/git-for-windows/git/releases/download/v2.26.2.windows.1/Git-2.26.2-64-bit.exe">64-bit Git for Windows Setup</a> 安裝 Git 工具.</p>
+<p>安裝 CMSiMDE 所需模組</p>
+<p>利用 cmd 開啟命令列視窗, 以 pip 安裝 flask flask_cors lxml bs4 markdown pelican leo 等模組</p>
+<p>pip install <span> flask flask_cors lxml bs4 markdown pelican leo</span></p>
+<p>Ubuntu 20.04 操作系統 (請下載<a href="https://drive.google.com/open?id=13Gqwyj0CGR6wa9dZg_BmlCLv5cNYWQJ_"><span> </span>W12 Virtualbox 虛擬主機檔案</a>)</p>
+<p>Ubuntu 20.04 同時存在 Python 2.7 與 Python 3.8.2,  CMSiMDE 只相容於 Python 3.8.2, 因此啟動指令必須使用:</p>
+<p>python3 wsgi.py</p>
+<p>與 </p>
+<p>pip3 install <span> flask flask_cors lxml bs4 markdown pelican leo</span></p>
+<p>Mac OS X 操作系統</p>
+<p>與 Ubuntu 20.04 類似.</p>
+<h2>w15-18統整</h2>
+<p>將 W1-W14 週的所有上課內容, 以圖文及影音資料加以整理在個人及分組倉儲、網站及簡報外,還要自選另一主題, 將分組協同的過程與內容整理在個人與分組的倉儲資料中.</p>
 </div>
+</div></div></div></div></div></div>
