--- a/content/w10-12如何用ssh.html
+++ b/content/w10-12如何用ssh.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Cmsimde.html'>Cmsimde</a><ul class='dropdown'><li><a href='如何使用 CMSiMDE.html'>如何使用 CMSiMDE</a></li></li></ul></ul><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Github.html'>Github</a></li></ul><li class='has-children'><a href='上課內容重點筆記.html'>上課內容重點筆記</a><ul class='dropdown'><li><a href='proxy.html'>proxy</a><li><a href='NAT.html'>NAT</a><li class='has-children'><a href='電腦之硬體設備.html'>電腦之硬體設備</a><ul class='dropdown'><li><a href='CPU.html'>CPU</a><li><a href='記憶體RAM.html'>記憶體RAM</a><li><a href='硬碟.html'>硬碟</a></li></ul><li class='has-children'><a href='IPv4與IPv6之差別.html'>IPv4與IPv6之差別</a><ul class='dropdown'><li><a href='IPv4.html'>IPv4</a><li><a href='IPv6.html'>IPv6</a></li></ul><li><a href='紙本筆記.html'>紙本筆記</a></li></ul><li class='has-children'><a href='課程進度.html'>課程進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='w10如何用ssh.html'>w10如何用ssh</a><li><a href='W13.html'>W13</a></li>
+                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Cmsimde.html'>Cmsimde</a><ul class='dropdown'><li><a href='如何使用 CMSiMDE.html'>如何使用 CMSiMDE</a></li></li></ul></ul><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Github.html'>Github</a></li></ul><li class='has-children'><a href='上課內容重點筆記.html'>上課內容重點筆記</a><ul class='dropdown'><li><a href='proxy.html'>proxy</a><li><a href='NAT.html'>NAT</a><li class='has-children'><a href='電腦之硬體設備.html'>電腦之硬體設備</a><ul class='dropdown'><li><a href='CPU.html'>CPU</a><li><a href='記憶體RAM.html'>記憶體RAM</a><li><a href='硬碟.html'>硬碟</a></li></ul><li class='has-children'><a href='IPv4與IPv6之差別.html'>IPv4與IPv6之差別</a><ul class='dropdown'><li><a href='IPv4.html'>IPv4</a><li><a href='IPv6.html'>IPv6</a></li></ul><li><a href='紙本筆記.html'>紙本筆記</a></li></ul><li class='has-children'><a href='課程進度.html'>課程進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3建立可攜式環境.html'>w3建立可攜式環境</a><li><a href='w4建網站.html'>w4建網站</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7-8.html'>w7-8</a><li><a href='w9期中考.html'>w9期中考</a><li><a href='w10-12如何用ssh.html'>w10-12如何用ssh</a><li><a href='W13.html'>W13</a><li><a href='w14.html'>w14</a><li><a href='w15-18統整.html'>w15-18統整</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w9 << <a href='w9.html'>Previous</a> <a href='W13.html'>Next</a> >> W13<br /><h1>w10如何用ssh</h1>
+    <div id="tipue_search_content">w9期中考 << <a href='w9期中考.html'>Previous</a> <a href='W13.html'>Next</a> >> W13<br /><h1>w10-12如何用ssh</h1>
 <p>由於在電腦教室時採用純 IPv6 協定上網, 因此為了能夠在近端將倉儲改版資料推送到目前只接受 IPv4 協定連線的 github, 以下除了將原本以 https 對 github 連線, 改為以 ssh 協定連線外, 在 Windows 環境下必須利用 putty 與 plink, 設定 putty 格式的 .ppk 以及能夠同時支援 IPv4 與 IPv6 的代理主機.</p>
 <p>設定步驟如下:</p>
 <p>1. 下載 Putty 工具組</p>
@@ -315,7 +315,7 @@ img.add_border {
 </div>
 </div>
 <p>之後就可以透過近端的 .ppk private key 與 Github.com 上的 public key 對應, 無需輸入帳號密碼就可以進行 git push了喔。</p>
-<br />w9 << <a href='w9.html'>Previous</a> <a href='W13.html'>Next</a> >> W13</div>
+<br />w9期中考 << <a href='w9期中考.html'>Previous</a> <a href='W13.html'>Next</a> >> W13</div>
         
     <!-- footer -->
       <div class="container">
