--- a/content/w14.html
+++ b/content/w14.html
@@ -154,11 +154,25 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">主題 << <a href='主題.html'>Previous</a> <a href='上課內容重點筆記.html'>Next</a> >> 上課內容重點筆記<br /><h1>Github</h1>
-<p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1vnkDLW1cg8hKEMUdjDstvWqiS4R1n3IC/view?usp=sharing">GithubPrimer.pdf</a></span></p>
-<p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/18MiM_d95ustohAqoUfx-gc-2dUE9Av0n/view?usp=sharing">ConflictsGUIToolAdvGit.pdf</a></span></p>
-<p><span></span></p>
-<br />主題 << <a href='主題.html'>Previous</a> <a href='上課內容重點筆記.html'>Next</a> >> 上課內容重點筆記</div>
+    <div id="tipue_search_content">W13 << <a href='W13.html'>Previous</a> <a href='w15-18統整.html'>Next</a> >> w15-18統整<br /><h1>w14</h1>
+<p>直接在操作系統建立網際內容管理合用系統</p>
+<p>Windows 10 64 位元操作系統</p>
+<p>安裝 Python 3.8.3 與 pip</p>
+<p>至 <a href="https://www.python.org/downloads/windows/">https://www.python.org/downloads/windows/</a> 下載 Python 3.8.3<span> </span><a href="https://www.python.org/ftp/python/3.8.3/python-3.8.3-amd64.exe">Windows x86-64 executable installer</a></p>
+<p>可以直接選擇安裝 pip 與所有選項內容</p>
+<p>安裝 Git</p>
+<p>利用 <a href="https://github.com/git-for-windows/git/releases/download/v2.26.2.windows.1/Git-2.26.2-64-bit.exe">64-bit Git for Windows Setup</a> 安裝 Git 工具.</p>
+<p>安裝 CMSiMDE 所需模組</p>
+<p>利用 cmd 開啟命令列視窗, 以 pip 安裝 flask flask_cors lxml bs4 markdown pelican leo 等模組</p>
+<p>pip install <span> flask flask_cors lxml bs4 markdown pelican leo</span></p>
+<p>Ubuntu 20.04 操作系統 (請下載<a href="https://drive.google.com/open?id=13Gqwyj0CGR6wa9dZg_BmlCLv5cNYWQJ_"><span> </span>W12 Virtualbox 虛擬主機檔案</a>)</p>
+<p>Ubuntu 20.04 同時存在 Python 2.7 與 Python 3.8.2,  CMSiMDE 只相容於 Python 3.8.2, 因此啟動指令必須使用:</p>
+<p>python3 wsgi.py</p>
+<p>與 </p>
+<p>pip3 install <span> flask flask_cors lxml bs4 markdown pelican leo</span></p>
+<p>Mac OS X 操作系統</p>
+<p>與 Ubuntu 20.04 類似.</p>
+<br />W13 << <a href='W13.html'>Previous</a> <a href='w15-18統整.html'>Next</a> >> w15-18統整</div>
         
     <!-- footer -->
       <div class="container">
