--- a/content/w15-18統整.html
+++ b/content/w15-18統整.html
@@ -154,11 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">主題 << <a href='主題.html'>Previous</a> <a href='上課內容重點筆記.html'>Next</a> >> 上課內容重點筆記<br /><h1>Github</h1>
-<p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1vnkDLW1cg8hKEMUdjDstvWqiS4R1n3IC/view?usp=sharing">GithubPrimer.pdf</a></span></p>
-<p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/18MiM_d95ustohAqoUfx-gc-2dUE9Av0n/view?usp=sharing">ConflictsGUIToolAdvGit.pdf</a></span></p>
-<p><span></span></p>
-<br />主題 << <a href='主題.html'>Previous</a> <a href='上課內容重點筆記.html'>Next</a> >> 上課內容重點筆記</div>
+    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <br /><h1>w15-18統整</h1>
+<p>將 W1-W14 週的所有上課內容, 以圖文及影音資料加以整理在個人及分組倉儲、網站及簡報外,還要自選另一主題, 將分組協同的過程與內容整理在個人與分組的倉儲資料中.</p>
+</div>
+</div></div></div></div></div></div><br />w14 << <a href='w14.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
