--- a/content/w3建立可攜式環境.html
+++ b/content/w3建立可攜式環境.html
@@ -154,11 +154,21 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">主題 << <a href='主題.html'>Previous</a> <a href='上課內容重點筆記.html'>Next</a> >> 上課內容重點筆記<br /><h1>Github</h1>
-<p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1vnkDLW1cg8hKEMUdjDstvWqiS4R1n3IC/view?usp=sharing">GithubPrimer.pdf</a></span></p>
-<p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/18MiM_d95ustohAqoUfx-gc-2dUE9Av0n/view?usp=sharing">ConflictsGUIToolAdvGit.pdf</a></span></p>
-<p><span></span></p>
-<br />主題 << <a href='主題.html'>Previous</a> <a href='上課內容重點筆記.html'>Next</a> >> 上課內容重點筆記</div>
+    <div id="tipue_search_content">w2 << <a href='w2.html'>Previous</a> <a href='w4建網站.html'>Next</a> >> w4建網站<br /><h1>w3建立可攜式環境</h1>
+<p></p>
+<p>建立可攜式環境</p>
+<p>為了讓工程師可以在不同的 Windows 10 64 位元電腦上管理 CMSiMDE 網際內容管理系統, 因此需要 Python 解譯環境以及一個文字檔案的編輯器.</p>
+<p>這裡所安裝的 Python 解譯器選擇由 C 所編寫的 CPython, 可以從<span> </span><a href="https://www.python.org/">https://www.python.org/</a>  下載安裝. 但是在此我們要將 Python 解譯系統配置在 USB 隨身碟上, 使用者可以隨身攜帶, 一旦配置完成後, 可以在任何一台 Windows 10 64 位元的筆電或電腦上執行 Python 或 C 程式.</p>
+<p>可攜 Python 程式環境的建立步驟:</p>
+<p>安裝 Python 套件時, 不要安裝 pip, 之後將 Python38 目錄複製到 data 目錄中, 然後建立 start.bat 指定使用可攜系統中的 Python, 之後再利用 g<a href="https://www.google.com/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=1&amp;ved=2ahUKEwivpbG6gfHoAhURrZQKHUT8ARcQFjAAegQIAhAB&amp;url=https%3A%2F%2Fbootstrap.pypa.io%2Fget-pip.py&amp;usg=AOvVaw0zKVO_zW0nkF7s0zdjWFNj">et-pip.py,</a><span> </span>以命令列中的 python get-pip.py 安裝 pip.</p>
+<p>可攜 Tiny C 程式環境的建立步驟:</p>
+<p>從<span> </span><a href="https://bellard.org/tcc/">https://bellard.org/tcc/</a><span> </span>下載 Tiny C, 將 tcc 解開壓縮後放到 data 目錄中. 然後修改 wscite 目錄中的 cpp.properties, 使用 Tiny C 類解譯 .c 程式.</p>
+<p>選用的文字編輯器:<span> </span><a href="https://www.scintilla.org/SciTE.html">https://www.scintilla.org/SciTE.html</a></p>
+<p>建立完成的可攜程式環境:</p>
+<p>下載<span> </span><a href="https://drive.google.com/open?id=1xDTDfcHU18ipqZNbOufMkSZqibqNeL2T">wcmj2020_tool.7z</a>, 檔案大小為 435 MB, 解開壓縮後為 1.8 GB (其中包括 Mypaint, Dia 與 OBS 等)</p>
+<p>將 wcmj2020_tool.7z 解壓縮到隨身碟或電腦硬碟中, 將 home 與 home_ipv6 目錄中的 .gitconfig user.name 與 user.email 改為自己的 Github 帳號與 email 後, 利用 start.bat 啟動可攜系統, 利用 stop.bat 關閉可攜系統.</p>
+<p><br/><br/><br/><br/></p>
+<br />w2 << <a href='w2.html'>Previous</a> <a href='w4建網站.html'>Next</a> >> w4建網站</div>
         
     <!-- footer -->
       <div class="container">
