--- a/content/w4建網站.html
+++ b/content/w4建網站.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Cmsimde.html'>Cmsimde</a><ul class='dropdown'><li><a href='如何使用 CMSiMDE.html'>如何使用 CMSiMDE</a></li></li></ul></ul><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Github.html'>Github</a></li></ul><li class='has-children'><a href='上課內容重點筆記.html'>上課內容重點筆記</a><ul class='dropdown'><li><a href='proxy.html'>proxy</a><li><a href='NAT.html'>NAT</a><li class='has-children'><a href='電腦之硬體設備.html'>電腦之硬體設備</a><ul class='dropdown'><li><a href='CPU.html'>CPU</a><li><a href='記憶體RAM.html'>記憶體RAM</a><li><a href='硬碟.html'>硬碟</a></li></ul><li class='has-children'><a href='IPv4與IPv6之差別.html'>IPv4與IPv6之差別</a><ul class='dropdown'><li><a href='IPv4.html'>IPv4</a><li><a href='IPv6.html'>IPv6</a></li></ul><li><a href='紙本筆記.html'>紙本筆記</a></li></ul><li class='has-children'><a href='課程進度.html'>課程進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='w10如何用ssh.html'>w10如何用ssh</a><li><a href='W13.html'>W13</a></li>
+                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Cmsimde.html'>Cmsimde</a><ul class='dropdown'><li><a href='如何使用 CMSiMDE.html'>如何使用 CMSiMDE</a></li></li></ul></ul><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Github.html'>Github</a></li></ul><li class='has-children'><a href='上課內容重點筆記.html'>上課內容重點筆記</a><ul class='dropdown'><li><a href='proxy.html'>proxy</a><li><a href='NAT.html'>NAT</a><li class='has-children'><a href='電腦之硬體設備.html'>電腦之硬體設備</a><ul class='dropdown'><li><a href='CPU.html'>CPU</a><li><a href='記憶體RAM.html'>記憶體RAM</a><li><a href='硬碟.html'>硬碟</a></li></ul><li class='has-children'><a href='IPv4與IPv6之差別.html'>IPv4與IPv6之差別</a><ul class='dropdown'><li><a href='IPv4.html'>IPv4</a><li><a href='IPv6.html'>IPv6</a></li></ul><li><a href='紙本筆記.html'>紙本筆記</a></li></ul><li class='has-children'><a href='課程進度.html'>課程進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3建立可攜式環境.html'>w3建立可攜式環境</a><li><a href='w4建網站.html'>w4建網站</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7-8.html'>w7-8</a><li><a href='w9期中考.html'>w9期中考</a><li><a href='w10-12如何用ssh.html'>w10-12如何用ssh</a><li><a href='W13.html'>W13</a><li><a href='w14.html'>w14</a><li><a href='w15-18統整.html'>w15-18統整</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,12 +154,32 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='w10如何用ssh.html'>Next</a> >> w10如何用ssh<br /><h1>w9</h1>
-<p><span>學習這幾周下來之心得</span></p>
-<p><span>w1教我們如何建立blogger</span></p>
-<p><span>w2-4則是教我們如何用git指令建立cmsimde網站，並如何維護</span></p>
-<p><span>而w6-w9則是教學如何開直播</span></p>
-<br />w8 << <a href='w8.html'>Previous</a> <a href='w10如何用ssh.html'>Next</a> >> w10如何用ssh</div>
+    <div id="tipue_search_content">w3建立可攜式環境 << <a href='w3建立可攜式環境.html'>Previous</a> <a href='w5.html'>Next</a> >> w5<br /><h1>w4建網站</h1>
+<div class="kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">此內容管理系統以 https:..github.com.mdecourse.cmsimde 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">利用 cmsimde 建立靜態網誌方法:</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">在 github 建立倉儲, git clone 到近端</div>
+<div dir="auto">參考https:..github.com.mdecourse.newcms, 加入除了 cmsimde 目錄外的所有內容</div>
+<div dir="auto">以 git submodule add https:..github.com.mdecourse.cmsimde cmsimde</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">建立 cmsimde 目錄, 並從 github 取下子模組內容.</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</div>
+</div>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<div dir="auto">之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</div>
+<div dir="auto">git clone --recurse-submodules https:..github.com.mdecourse.newcms.git</div>
+</div>
+<br />w3建立可攜式環境 << <a href='w3建立可攜式環境.html'>Previous</a> <a href='w5.html'>Next</a> >> w5</div>
         
     <!-- footer -->
       <div class="container">
