--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -325,7 +325,7 @@
 <p><span>w1教我們如何建立blogger</span></p>
 <p><span>w2-4則是教我們如何用git指令建立cmsimde網站，並如何維護</span></p>
 <p><span>而w6-w9則是教學如何開直播</span></p>
-<h2>w10如何用ssh</h2>
+<h2>w10-12如何用ssh</h2>
 <p>由於在電腦教室時採用純 IPv6 協定上網, 因此為了能夠在近端將倉儲改版資料推送到目前只接受 IPv4 協定連線的 github, 以下除了將原本以 https 對 github 連線, 改為以 ssh 協定連線外, 在 Windows 環境下必須利用 putty 與 plink, 設定 putty 格式的 .ppk 以及能夠同時支援 IPv4 與 IPv6 的代理主機.</p>
 <p>設定步驟如下:</p>
 <p>1. 下載 Putty 工具組</p>
@@ -486,8 +486,7 @@
 </div>
 </div>
 <p>之後就可以透過近端的 .ppk private key 與 Github.com 上的 public key 對應, 無需輸入帳號密碼就可以進行 git push了喔。</p>
-<br/>W13 <span>Pelican Blog 內容與 Google Blogger 同步</span>
-<p>Pelican Blog 內容與 Google Blogger 同步</p>
+<h2>W13</h2>
 <p>利用 Windows 10 設定 -&gt; 選擇預設網頁瀏覽器, 使用 Google Chrome 作為預設瀏覽器.</p>
 <p>隨身程式系統必須安裝 <span>google-api-python-client 與 oauth2client</span><br/><br/>pip install google-api-python-client oauth2client<br/><br/>OAuth 2.0 client IDs 程式類別可以選擇 other<br/><br/>使用者完成 client_secrets.json 設定後, 必須將檔案存在倉儲目錄外部</p>
 <p>add_to_blogger 按鈕內容:</p>
@@ -874,7 +873,8 @@
 </tr>
 </tbody>
 </table>
-<h2>w14</h2>
+</div>
+</div><h2>w14</h2>
 <p>直接在操作系統建立網際內容管理合用系統</p>
 <p>Windows 10 64 位元操作系統</p>
 <p>安裝 Python 3.8.3 與 pip</p>
@@ -895,4 +895,4 @@
 <h2>w15-18統整</h2>
 <p>將 W1-W14 週的所有上課內容, 以圖文及影音資料加以整理在個人及分組倉儲、網站及簡報外,還要自選另一主題, 將分組協同的過程與內容整理在個人與分組的倉儲資料中.</p>
 </div>
-</div></div></div></div></div></div></div></div>
+</div></div></div></div></div></div>
