--- a/content/分組討論之內容.html
+++ b/content/分組討論之內容.html
@@ -154,9 +154,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Github << <a href='Github.html'>Previous</a> <a href='proxy.html'>Next</a> >> proxy<br /><h1>上課內容重點筆記</h1>
-<p><img alt="情報】官方提供的鬼滅之刃各種GIF圖@鬼滅之刃哈啦板- 巴哈姆特" height="321" src="https://img.gifmagazine.net/gifmagazine/images/3902338/original.gif" width="401"/></p>
-<br />Github << <a href='Github.html'>Previous</a> <a href='proxy.html'>Next</a> >> proxy</div>
+    <div id="tipue_search_content">w15-18統整 << <a href='w15-18統整.html'>Previous</a> <br /><h1>分組討論之內容</h1>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div><br />w15-18統整 << <a href='w15-18統整.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
