--- a/content/index.html
+++ b/content/index.html
@@ -156,7 +156,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='About.html'>Next</a> >> About<br /><h1>有關本網站</h1>
 <p>這裡是50833106的紀錄學習歷程網站</p>
-<p><img alt="" height="141" src="./../images/20191121004812.png" width="250"/></p>
+<p><img alt="Hello Cute GIF - Hello Cute Cat - Discover &amp; Share GIFs" height="349" src="https://media1.tenor.com/images/9969d2bc836ee216a3319d0c15d8ad35/tenor.gif?itemid=16242995" width="349"/></p>
 <br /> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
