--- a/config/content.htm
+++ b/config/content.htm
@@ -1,6 +1,6 @@
 <h1>有關本網站</h1>
 <p>這裡是50833106的紀錄學習歷程網站</p>
-<p><img alt="" height="141" src="/images/20191121004812.png" width="250"/></p>
+<p><img alt="Hello Cute GIF - Hello Cute Cat - Discover &amp; Share GIFs" height="349" src="https://media1.tenor.com/images/9969d2bc836ee216a3319d0c15d8ad35/tenor.gif?itemid=16242995" width="349"/></p>
 <h1>About</h1>
 <p><img alt="" height="199" src="/images/小貓咪.jpg" width="211"/></p>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
