--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -101,7 +101,8 @@
 <div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
 <div dir="auto">Port 埠號</div>
 <div dir="auto">DHCP動態網路位置</div>
-</div><h2>w2</h2>
+</div>
+<h2>w2</h2>
 <p><span>課程小筆記</span></p>
 <div class="kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
 <div dir="auto">IPv4 version 4 IP 四個區段,用.隔開</div>
@@ -320,7 +321,8 @@
 </div>
 </div>
 <div dir="auto">下周可能線上上課</div>
-</div><h2>w9期中考</h2>
+</div>
+<h2>w9期中考</h2>
 <p><span>學習這幾周下來之心得</span></p>
 <p><span>w1教我們如何建立blogger</span></p>
 <p><span>w2-4則是教我們如何用git指令建立cmsimde網站，並如何維護</span></p>
@@ -874,7 +876,8 @@
 </tbody>
 </table>
 </div>
-</div><h2>w14</h2>
+</div>
+<h2>w14</h2>
 <p>直接在操作系統建立網際內容管理合用系統</p>
 <p>Windows 10 64 位元操作系統</p>
 <p>安裝 Python 3.8.3 與 pip</p>
@@ -894,5 +897,11 @@
 <p>與 Ubuntu 20.04 類似.</p>
 <h2>w15-18統整</h2>
 <p>將 W1-W14 週的所有上課內容, 以圖文及影音資料加以整理在個人及分組倉儲、網站及簡報外,還要自選另一主題, 將分組協同的過程與內容整理在個人與分組的倉儲資料中.</p>
+<h2>分組討論之內容</h2>
 </div>
-</div></div></div></div></div></div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
