--- a/config/content.htm
+++ b/config/content.htm
@@ -35,14 +35,14 @@
 <p></p>
 <p></p>
 <h1>主題</h1>
-<h4>Google Blogger</h4>
+<h2>Google Blogger</h2>
 <p>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/12Ypf02FVP9l7a9ufZfhRicN-rzCKkAf5/view?usp=sharing">2010_BeginningGoogleBlogger.pdf</a></p>
-<h4>WCM</h4>
+<h2>WCM</h2>
 <p>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1gLb9_6FEv58wVX2uShG_3sgUseFEcH_y/view?usp=sharing">2020wcm_topic_1.pdf</a>.</p>
 <p>What is a content management system?</p>
 <p>Analyzing your information life cycle.</p>
 <p>Overview of enterprise content management.</p>
-<h4><span>Git</span></h4>
+<h2><span>Git</span></h2>
 <p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1YkLWsDVRlScSuSBQv2Aa1JSjvbydJli-/view?usp=sharing">IntroductionToVersionControlAndGit.pdf</a>.</span></p>
 <p><span>What is version control?</span></p>
 <p><span>Git installation and setup.</span></p>
@@ -898,4 +898,11 @@
 <h2>分組討論之內容</h2>
 <p>分組討論</p>
 <p></p>
-<p></p></div></div></div></div></div></div></div>
+<p></p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
