--- a/content/Google Blogger.html
+++ b/content/Google Blogger.html
@@ -154,9 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">proxy << <a href='proxy.html'>Previous</a> <a href='電腦之硬體設備.html'>Next</a> >> 電腦之硬體設備<br /><h1>NAT</h1>
-<p><b>網路位址轉換</b><span>（英語：</span><span lang="en"><b>N</b>etwork<span> </span><b>A</b>ddress<span> </span><b>T</b>ranslation</span><span>，縮寫：</span><span lang="en"><b>NAT</b></span><span>；又稱</span><b>網路掩蔽</b><span>、</span><b><span lang="en">IP</span>掩蔽</b><span>）在</span><a class="mw-redirect" href="https://zh.wikipedia.org/wiki/%E8%A8%88%E7%AE%97%E6%A9%9F%E7%B6%B2%E7%B5%A1" title="計算機網路">計算機網路</a><span>中是一種在</span><span lang="en">IP</span><a class="mw-redirect" href="https://zh.wikipedia.org/wiki/%E5%B0%81%E5%8C%85" title="封包">封包</a><span>通過</span><a href="https://zh.wikipedia.org/wiki/%E8%B7%AF%E7%94%B1%E5%99%A8" title="路由器">路由器</a><span>或</span><a href="https://zh.wikipedia.org/wiki/%E9%98%B2%E7%81%AB%E5%A2%99" title="防火牆">防火牆</a><span>時重寫來源</span><span lang="en"><a href="https://zh.wikipedia.org/wiki/IP%E5%9C%B0%E5%9D%80" title="IP地址">IP地址</a></span><span>或目的</span><span lang="en">IP</span><span>位址的技術。這種技術被普遍使用在有多台主機但只通過一個公有IP位址存取</span><a class="mw-redirect" href="https://zh.wikipedia.org/wiki/%E7%B6%B2%E9%9A%9B%E7%B6%B2%E8%B7%AF" title="網際網路">網際網路</a><span>的</span><a class="mw-redirect" href="https://zh.wikipedia.org/wiki/%E7%A7%81%E6%9C%89%E7%BD%91%E7%BB%9C" title="私有網路">私有網路</a><span>中。它是一個方便且得到了廣泛應用的技術。當然，</span><span lang="en">NAT</span><span>也讓主機之間的通信變得複雜，導致了通信效率的降低。</span></p>
-<br />proxy << <a href='proxy.html'>Previous</a> <a href='電腦之硬體設備.html'>Next</a> >> 電腦之硬體設備</div>
+    <div id="tipue_search_content">主題 << <a href='主題.html'>Previous</a> <a href='WCM.html'>Next</a> >> WCM<br /><h1>Google Blogger</h1>
+<p>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/12Ypf02FVP9l7a9ufZfhRicN-rzCKkAf5/view?usp=sharing">2010_BeginningGoogleBlogger.pdf</a></p>
+<br />主題 << <a href='主題.html'>Previous</a> <a href='WCM.html'>Next</a> >> WCM</div>
         
     <!-- footer -->
       <div class="container">
