--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -896,11 +896,6 @@
 <h2>w15-18統整</h2>
 <p>將 W1-W14 週的所有上課內容, 以圖文及影音資料加以整理在個人及分組倉儲、網站及簡報外,還要自選另一主題, 將分組協同的過程與內容整理在個人與分組的倉儲資料中.</p>
 <h2>分組討論之內容</h2>
+<p>分組討論</p>
 <p></p>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+<p></p></div></div></div></div></div></div></div>
